--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Change history for MySQL::Workbench::Parser
 ===========================================
 
+0.03 2014-11-19
+
+     - remove "_F" from workbench specific column datatypes
+     - add test for new behaviour
+
 0.02 2014-03-03
 
      - fixed testscript as YAML::Tiny quotes numeric values now
